--- a/mina/pages/index/index.wxml
+++ b/mina/pages/index/index.wxml
@@ -4,25 +4,22 @@
         <image class="remind-img" src="/images/more/loading.gif"></image>
     </view>
     <block wx:else>
-        <image class="title" src="/images/more/title8.png"></image>
         <view class="content">
             <view class="hd" style="transform:rotateZ({{ angle }}deg);">
-                <image class="logo" src="/images/more/logo.png"></image>
+                <image class="logo" src="/images/more/timg.png"></image>
                 <image class="wave" src="/images/more/wave.png" mode="aspectFill"></image>
-                <image class="wave wave-bg" src="/images/more/wave.png" mode="aspectFill"></image>
             </view>
             <view class="bd">
-                <image class="smalltitle" src="/images/more/confirm-word1.png"></image>
 
                 <view class="confirm-btn" bindtap='goToIndex' wx:if="{{ regFlag==true }}">
-                    <text>走吧，订餐去</text>
+                    <text>go吧，聆阅</text>
                 </view>
 
                 <button class="confirm-btn" open-type="getUserInfo" bindgetuserinfo="login"
                         wx:if="{{ regFlag==false }}">授权登陆
                 </button>
 
-                <text class="copyright">@编程浪子 54php.cn</text>
+                <text class="copyright">@iron boy</text>
             </view>
         </view>
     </block>
