--- a/mina/pages/index/index.wxss
+++ b/mina/pages/index/index.wxss
@@ -14,7 +14,7 @@ page{
   flex: 1;
   display: flex;
   flex-direction: column;
-  background: #69C3AA;
+  background: rgb(206, 92, 168);
   align-items: stretch;
   padding: 0;
   height: 100%;
@@ -117,7 +117,7 @@ page{
 }
 .wave {
   position: absolute;
-  z-index: 3;
+  z-index: 5;
   right: 0;
   bottom: 0;
   opacity: 0.725;
@@ -156,7 +156,7 @@ page{
   font-size: 13pt;
   line-height: 85rpx;
   height: 85rpx;
-  background: #69C3AA;
+  background: rgb(206, 92, 168);
   color: #fff;
   text-align: center;
   border-radius: 100rpx;
